--- a/style.css
+++ b/style.css
@@ -66,18 +66,104 @@
     gap: 20px;
   }
 
-  .button{
+  .button {
     width: 300px;
     border: none;
     height: 40px;
     border-radius: 10px;
     color: white;
     font-family: "Inter";
-    background-color:  hsl(0, 0%, 20%);
+    background-color: hsl(0, 0%, 20%);
     cursor: pointer;
   }
 
-  .button:hover {
+  .button:hover,
+  .button:focus {
     opacity: 80%;
+    outline: 2px solid hsl(75, 94%, 57%);
+  }
+}
+
+@media (max-width: 375px) {
+  .main-div {
+    display: flex;
+    background-color: hsl(0, 0%, 8%);
+    border-radius: 8px;
+    width: 375px;
+    height: 812px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    height: auto;
+    gap: 10px;
+    min-height: 422px;
+    padding: 24px 24px 24px 24px;
+    align-items: center;
+    background-color: hsl(0, 0%, 12%);
+    border-radius: 20px;
+  }
+
+  .information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    display: block;
+    object-fit: cover;
+  }
+
+  .name-text {
+    color: white;
+    font-family: "Inter";
+    font-weight: 700;
+    font-size: 1.5rem;
+  }
+
+  .region-text {
+    color: hsl(75, 94%, 57%);
+    font-family: "Inter";
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+
+  .quote-text {
+    color: white;
+    font-family: "Inter";
+    font-size: small;
+  }
+
+  .links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .button {
+    width: 300px;
+    border: none;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-family: "Inter";
+    background-color: hsl(0, 0%, 20%);
+    cursor: pointer;
+  }
+
+  .button:hover,
+  .button:focus {
+    opacity: 80%;
+    outline: 2px solid hsl(75, 94%, 57%);
   }
 }
